2024-08-02T00:33:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10207890999 # 375
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-02
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 345 1251 / 348 1257
* notice: next accum: outdated-unq outdated-all / unq all: 346 1253 / 349 1261
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2024-07-18] / [2024-08-01]

2024-07-30T00:33:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10154012436 # 372
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-30
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 344 1249 / 347 1255
* notice: next accum: outdated-unq outdated-all / unq all: 345 1251 / 348 1257
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-07-15] / [2024-07-29]

2024-07-28T00:37:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10127560001 # 370
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-28
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 343 1247 / 347 1255
* notice: next accum: outdated-unq outdated-all / unq all: 344 1249 / 347 1255
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-07-13] / []

2024-07-27T00:33:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10119335453 # 369