@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-08-02T00:33:39Z",
-  "count_outdated" : 1253,
-  "uniques_outdated" : 346,
-  "count" : 1261,
-  "uniques" : 349,
+  "timestamp" : "2024-08-03T00:33:10Z",
+  "count_outdated" : 1255,
+  "uniques_outdated" : 347,
+  "count" : 1268,
+  "uniques" : 351,
   "views" : [
-    {
-      "timestamp": "2024-07-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-07-29T00:00:00Z",
       "count": 2,
@@ -31,6 +22,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-02T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
