@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 3,
+  "count": 13,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2024-07-19T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-07-29T00:00:00Z",
       "count": 2,
@@ -16,6 +11,11 @@
       "timestamp": "2024-08-01T00:00:00Z",
       "count": 4,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-08-02T00:00:00Z",
+      "count": 7,
+      "uniques": 2
     }
   ]
 }
