@@ -1,3 +1,12 @@
+2024-08-03T00:33:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10223766549 # 376
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-03
+* notice: last 14d: unq all: 4 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 346 1253 / 349 1261
+* notice: next accum: outdated-unq outdated-all / unq all: 347 1255 / 351 1268
+* notice: prev exec diff / last date diff / accum: unq all: +2 +7 -0 -0 / +2 +7 -0 -0 / 2 7
+* notice: removed / changed dates: [2024-07-19] / [2024-08-02]
+
 2024-08-02T00:33:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10207890999 # 375
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-02
